RESOLVED FIXED142813
Ignore some deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=142813
Summary Ignore some deprecation warnings
Conrad Shultz
Reported 2015-03-17 23:26:06 PDT
Ignore some deprecation warnings in HTMLConverter.mm, PopupMenuMac.mm, and WebPopupMenuProxyMac.mm.
Attachments
Patch (5.66 KB, patch)
2015-03-17 23:33 PDT, Conrad Shultz
mrowe: review+
Conrad Shultz
Comment 1 2015-03-17 23:30:35 PDT
Conrad Shultz
Comment 2 2015-03-17 23:33:46 PDT
Conrad Shultz
Comment 3 2015-03-18 00:06:24 PDT
Note You need to log in before you can comment on or make changes to this bug.