Ignore some deprecation warnings https://bugs.webkit.org/show_bug.cgi?id=142813

Reviewed by Mark Rowe.

Fixing the deprecations is tracked by: <rdar://problem/20201450>

Source/WebCore:

* editing/cocoa/HTMLConverter.mm:
(HTMLConverter::_processElement):

Source/WebKit/mac:

* WebCoreSupport/PopupMenuMac.mm:
(PopupMenuMac::populate):

Source/WebKit2:

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::populate):

Canonical link: https://commits.webkit.org/160839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181686 268f45cc-cd09-0410-ab3c-d52691b4dbfc